<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android">


    <item
            android:id="@+id/action_assigned"
            android:icon="@drawable/assigned_tab"
            android:title="@string/assigned" app:showAsAction="always|withText"/>

    <item
            android:id="@+id/action_completed"
            android:icon="@drawable/competed_tab"
            android:title="@string/completed"
            app:showAsAction="always|withText"/>

    <item
            android:id="@+id/action_messages"
            android:icon="@drawable/messages_tab"
            android:title="@string/messages" app:showAsAction="always|withText"/>
    <item
            android:id="@+id/action_profile"
            android:icon="@drawable/profile_tab"
            android:title="@string/profile" app:showAsAction="always|withText"/>


</menu>