<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/main_layout">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:padding="5dp"
                  android:background="@drawable/curve_toolbar_bg"
                  android:layout_height="wrap_content">

        <include layout="@layout/tool_bar_layout">

        </include>
        <TextView android:layout_width="match_parent"
                  android:text="@string/backgrount_rightact_heading"
                  android:textSize="25sp"
                  android:textColor="#153A4D"
                  android:layout_marginTop="25dp"
                  android:background="@drawable/spinner_curved_rectangle_white"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:visibility="gone"
                  android:text="@string/dummy_text_view"/>
        <TextView android:layout_width="match_parent"
                  android:text="@string/backgrount_disclosure"
                  android:textSize="25sp"
                  android:textColor="#153A4D"
                  android:background="@drawable/spinner_curved_rectangle_white"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="#9B9B9B"
                  android:textSize="18sp"
                  android:layout_margin="5dp"
                  android:text="@string/dummy_text_view"/>

        <LinearLayout android:layout_width="match_parent"
                      android:background="#ededed"
                      android:padding="5dp"
                      android:orientation="horizontal"
                      android:layout_height="wrap_content">
            <CheckBox android:layout_width="wrap_content"
                      android:checked="false"
                      android:id="@+id/checkbox_accept" android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textColor="@color/grey_500"
                      android:text="@string/dummy_acknoledge" android:textSize="18sp"/>
        </LinearLayout>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:background="@drawable/curved_rectangle_theme" android:layout_margin="34dp"
                android:text="@string/btn_continue"
                android:textSize="18sp"
                android:onClick="continuebtn"
                android:textAllCaps="false"
                android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>