<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@drawable/curve_toolbar_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <include android:layout_width="match_parent"
             android:id="@+id/include"
             android:layout_height="wrap_content" layout="@layout/tool_bar_layout"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/textView14"/>
    <TextView
            android:text="@string/dummy_text_view"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/include" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView15"/>
    <TextView
            android:text="@string/dummy_heading"
            android:textStyle="bold"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView19"/>
    <TextView
            android:text="@string/dummy_text"
            android:layout_width="395dp"
            android:layout_height="38dp"
            android:id="@+id/textView19"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView20"/>
    <TextView
            android:text="@string/dummy_heading2"
            android:layout_width="395dp"
            android:textStyle="bold"
            android:layout_height="40dp"
            android:id="@+id/textView20"
            tools:layout_editor_absoluteY="375dp" tools:layout_editor_absoluteX="16dp"/>
    <TextView
            android:text="@string/dummy_text"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            tools:layout_editor_absoluteY="415dp" tools:layout_editor_absoluteX="33dp"/>
</LinearLayout>