<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/curved_rectangle_white">

    <TextView
            android:text="@string/upload_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"/>

    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/colorAccent"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="8dp"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginEnd="8dp"
          app:layout_constraintTop_toBottomOf="@+id/textView7"
          android:layout_marginTop="4dp"
          android:id="@+id/view"/>
    <TextView
            android:text="@string/camera"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center|start"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:id="@+id/camera"
            android:onClick="onCameraClick"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/view"/>
    <TextView
            android:text="@string/gallery"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center|start"
            android:textSize="18sp"
            android:onClick="onGalleryClick"
            android:textColor="@android:color/black"
            android:id="@+id/gallery"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/camera"/>

</androidx.constraintlayout.widget.ConstraintLayout>